alignment fix attempt 1

--- a/src/styles/_buymodal.sass
+++ b/src/styles/_buymodal.sass
@@ -1,6 +1,5 @@
 .buy-modal
     margin: auto
-    margin-left: -20px
     .MuiCard-root
         width: 374px
         height: 470px
