--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -323,7 +323,6 @@
 }
 .buy-modal {
   margin: auto;
-  margin-left: -20px;
 }
 .buy-modal .MuiCard-root {
   width: 374px;
